--- a/src/Styles/waningPhases.scss
+++ b/src/Styles/waningPhases.scss
@@ -3,6 +3,11 @@
   --endDegree: 60;
 }
 
+.blankMoon {
+  width: 200px;
+  height: 200px;
+}
+
 .waningStart {
   width: 200px;
   height: 200px;
@@ -11,7 +16,7 @@
   overflow: hidden;
   position: relative;
   background-color: #fff;
-  transform: translateZ(0);
+  transform: translateZ(0) rotateY(0);
 
   &::before {
     content: ' ';
@@ -31,7 +36,7 @@
   transform-style: preserve-3d;
   width: 100%;
   height: 100%;
-  animation: rotater 4s linear forwards;
+  animation: rotater 4s linear;
   animation-iteration-count: 1;
 
   &::before,
