--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: white
+} */
+
+@font-face {
+  font-family: "pixelFont";
+  src: local("pixelFont") url(./Images/VT323-Regular.ttf) format("truetype");
+}
+
+body {
+  margin: 0;
+  font-family: "pixelFont";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white
