--- a/src/Styles/LoadingAnimation.scss
+++ b/src/Styles/LoadingAnimation.scss
@@ -10,9 +10,6 @@
   0% {
     transform: scale(30) translateY(-20px)
   }
-  // 50% {
-  //   transform: scale(20) translateY(-20px)
-  // }
   100% {
     transform: scale(1) translateY(0)
   }
@@ -29,19 +26,18 @@
   0% {
     transform: scale(30) translateY(20px)
   }
-  // 50% {
-  //   transform: scale(20) translateY(20px)
-  // }
   100% {
     transform: scale(1) translateY(0)
   }
 }
 
 .bigBang {
-  // height: 100vh;
-  // width: 100vw;
   animation: bigBang 2s both;
-  // transform: scale(1);
+  min-height: 100vh;
+  width: 100%;
+  background-image: url("../Images/New-BG-sm.svg");
+  background-repeat: repeat;
+  background-size: 100%;
 }
 
 @keyframes bigBang {
@@ -50,8 +46,6 @@
   }
   100% {
     transform: scale(1);
-    // background-position: -3rem;
-    // height: 300vh;
     background-attachment: fixed;
   }
 }
