--- a/src/Styles/SmallFeature.css
+++ b/src/Styles/SmallFeature.css
@@ -4,7 +4,9 @@
   font-size: 2.5vmin !important;
 }
 .circle { 
-  width: 20vw;
+  width: 25vw;
+  border-width: 4px;
+  border-color: white;
 }
 
 .circle:after {
@@ -12,6 +14,8 @@
   position: relative;
   opacity: .7;
   background-color: black;
+  border-width: 4px;
+  border-color: white;
   content: "";
   display: flex;
   padding-bottom: 100%;
