--- a/src/Styles/SmallFeature.css
+++ b/src/Styles/SmallFeature.css
@@ -1,7 +1,7 @@
 .lightLink {
   color: white !important;
   margin-right: 1em;
-  font-size: 2.5vmin !important;
+  font-size: calc(10px + 1vw) !important;
 }
 .circle { 
   width: 25vw;
